--- a/css/less/master.less
+++ b/css/less/master.less
@@ -20,7 +20,7 @@ body{
 	background: -moz-linear-gradient(top, #606c88 0%, #3f4c6b 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#606c88), color-stop(100%,#3f4c6b)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #606c88 0%,#3f4c6b 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #606c88 0%,#3f4c6b 100%); /* Opera 11.10+ */
+	backgruond: -o-linear-gradient(top, #606c88 0%,#3f4c6b 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top, #606c88 0%,#3f4c6b 100%); /* IE10+ */
 	background: linear-gradient(to bottom, #606c88 0%,#3f4c6b 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#3f4c6b',GradientType=0 ); /* IE6-9 */
@@ -30,6 +30,29 @@ body{
 	.navbar-header{
 		color:#FFF;
 		text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+		i.fa-rocket{
+		    -webkit-animation:shake 3s linear infinite;
+            -moz-animation:shake 3s linear infinite;
+            animation:shake 3s linear infinite;
+		}
+		@-moz-keyframes shake { 
+			0% { -moz-transform: rotate(0deg); }
+			25% { -moz-transform: rotate(5deg); }
+			50% { -moz-transform: rotate(0deg); }
+			75% { -moz-transform: rotate(-5deg); }
+		}
+		@-webkit-keyframes shake {
+			0% { -webkit-transform: rotate(0deg); }
+			25% { -webkit-transform: rotate(5deg); }
+			50% { -webkit-transform: rotate(0deg); }
+			75% { -webkit-transform: rotate(-5deg); }
+		}
+		@keyframes shake {
+			0% { transform: rotate(0deg); }
+			25% { transform: rotate(5deg); }
+			50% { transform: rotate(0deg); }
+			75% { transform: rotate(-5deg); }
+		}
 		strong{
 			font-family: verdana, arial;
 			font-size: 24px;
@@ -42,6 +65,12 @@ body{
 			top:5px;
 			left: 140px;
 		}
+	}
+	button.btn{
+		display:none;
+		position: absolute;
+		right:5px;
+		top:5px;
 	}
 }
 
@@ -60,6 +89,9 @@ body{
 	#sidebar{
 		.column(4);
 		nav{
+			-webkit-box-shadow: inset 10px 12px 34px -11px rgba(0,0,0,0.75);
+			-moz-box-shadow: inset 10px 12px 34px -11px rgba(0,0,0,0.75);
+			box-shadow: inset 10px 12px 34px -11px rgba(0,0,0,0.75);
 			border-radius: 15px;
 			padding:0 10px 10px 10px;
 			border:1px solid #333;
@@ -84,5 +116,22 @@ body{
 		.column(8);
 		font-weight:bold;
 		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.navbar{
+		button.btn{
+			display:block;
+		}
+	}
+	#content{	
+		#sidebar{
+			display:none;
+			.column(12);
+		}
+		[ng-view]{
+			.column(12);
+		}
 	}
 }
